src/sections/Hero/Hero.css
/* Hero */
.heroContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    text-align: center;
    position: relative;
    background: url('/src/assets/img/hero-background.webp') center/cover no-repeat;
    color: #fff;
    padding: 2rem;
    background-size: cover;
    background-position: center;
    z-index: 1;
  }

  .heroOverlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: 2;
}
  
  .heroTitle {
    font-size: 4rem;
    font-weight: 600;
    opacity: 0;
    animation: fadeIn 2s ease forwards;
    margin: 0.25rem;
    line-height: 1;
    z-index:2;
    position: relative;
  }
  
  /* Animación para los títulos */
  @keyframes fadeIn {
    0% {
      opacity: 0;
      transform: translateY(50px);
    }
    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }
  
  .heroTitle.conectar {
    animation-delay: 0.5s;
  }
  
  .heroTitle.analizar {
    animation-delay: 1s;
  }
  
  .heroTitle.impulsar {
    animation-delay: 1.5s;
  }

  .heroTitle.descubrir {
    animation-delay: 2s;
  }
  
  /* Estilos para el botón */
  .buttonShowMore {
    margin-top: 2rem;
    padding: 1rem 2rem;
    font-size: 1.2rem;
    background-color: rgba(0, 188, 212, 0.7);
    color: #fff;
    text-decoration: none;
    border-radius: 5px;
    transition: background-color 0.3s ease;
  }
  
  .buttonShowMore:hover {
    background-color: #00bcd4;
    color: #000;
  }
  
  /* Ajustes para pantallas más pequeñas */
  @media (max-width: 768px) {
    .heroTitle {
      font-size: 2.5rem;
    }
  
    .buttonShowMore {
      font-size: 1rem;
      padding: 0.8rem 1.5rem;
    }
  }
  

